# codex

.cargo/: config.toml
.github/workflows/: rust-ci-full.yml
codex-cli/scripts/: install_native_deps.py
codex-rs/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client_tests.rs  events.rs  reducer.rs
codex-rs/app-server/: README.md
codex-rs/app-server/src/: extensions.rs  mcp_refresh.rs  message_processor.rs  request_processors.rs  thread_state.rs
codex-rs/cli/src/: login.rs
codex-rs/cloud-tasks/src/: util.rs
codex-rs/code-mode/src/: service.rs
codex-rs/config/src/: tui_keymap.rs
codex-rs/core/: config.schema.json
codex-rs/core-skills/src/: loader_tests.rs
codex-rs/core/src/: client.rs  client_common.rs  client_tests.rs  codex_delegate.rs  codex_thread.rs  compact.rs  compact_remote.rs  compact_remote_v2.rs  lib.rs  next_prompt_suggestion.rs  next_prompt_suggestion_tests.rs  session_startup_prewarm.rs  thread_manager.rs  turn_metadata.rs  turn_metadata_tests.rs  usage.rs
codex-rs/exec-server/src/: environment.rs  environment_provider.rs  environment_toml.rs
codex-rs/exec/src/: lib.rs
codex-rs/ext/web-search/: Cargo.toml
codex-rs/features/src/: lib.rs  tests.rs
codex-rs/login/src/: device_code_auth.rs  lib.rs  server.rs
codex-rs/models-manager/: models.json
codex-rs/state/: BUILD.bazel
codex-rs/state/migrations/: 0035_usage_samples.sql
codex-rs/state/src/: lib.rs  runtime.rs
codex-rs/state/src/model/: mod.rs  usage.rs
codex-rs/state/src/runtime/: threads.rs  usage.rs
scripts/install/: install.ps1
(+165 files in other folders)
